syntax = "proto3";

package coffeeAndTea.GRPCJavaLearning.calculator;

option java_package = "coffeeAndTea.GRPCJavaLearning.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 first_number=1;
  int32 second_number=2;
}

message SumResponse {
  int32 sum_result=1;
}

message PrimeNumberDecompositionRequest {
  int32 number=1;

}

message PrimeNumberDecompositionResponse {
  int32 prime_factor=1;
}

message AverageRequest {
  int32 request_number = 1;
}

message AverageResponse {
  int32 response_number = 1;
}

message MaxRequest {
  int32 request = 1;
}

message MaxResponse {
  int32 response = 1;
}

message SquareRootRequest {
  int32 request = 1;
}

message SquareRootResponse {
  double square_root = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
      returns (stream PrimeNumberDecompositionResponse) {};

  rpc average(stream AverageRequest) returns (AverageResponse) {};

  rpc findMax(stream MaxRequest) returns (stream MaxResponse) {};

  // error handling
  rpc squareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}